# rust-tumbler

./: .claudeignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  implementation-plan.md  index.html  package-lock.json  package.json  requirements.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/subtext/: Cargo.toml  README.md
crates/subtext/src/: lib.rs  pdf.rs  query.rs  report.rs  xml.rs
crates/subtext/src/extract/: annotations.rs  article_threads.rs  attachments.rs  destinations.rs  forms.rs  marked_content.rs  metadata.rs  mod.rs  optional_content.rs  orphans.rs  outlines.rs  page_labels.rs  page_text.rs  raw.rs  redaction.rs  rendered_ocr.rs  revisions.rs  scripts.rs  signatures.rs  structure.rs  uris.rs  xfa.rs
crates/subtext/tests/: corpus.rs
scripts/: sync-version.js
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_conformance_fixtures.rs  gen_form_fixtures.rs  gen_signature_fixtures.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  thumbnailer_reg.rs
src-tauri/src/commands/: app.rs  conformance.rs  document.rs  encryption.rs  forms.rs  linearize.rs  margins.rs  metadata.rs  mod.rs  ocr.rs  optimize.rs  pages.rs  print.rs  redact.rs  render.rs  save.rs  save_searchable.rs  signature.rs  startup.rs  text.rs  text_layer.rs  theme.rs  typewriter.rs
src-tauri/tests/fixtures/conformance/: README.md
src-tauri/tests/fixtures/redaction/pentest/: README.md
src-tauri/tests/fixtures/redaction/pentest-redacted/: README.md
src-tauri/tests/fixtures/signatures/: README.md
src-tauri/thumbnailer/: Cargo.toml
src-tauri/thumbnailer/src/: lib.rs
src-tauri/wix/: file-associations.wxs
src/components/: BirthdayNotes.tsx  ContinuousViewer.test.ts  ContinuousViewer.tsx  FormLayer.test.tsx  FormLayer.tsx  HighlightLayer.tsx  IconRail.test.tsx  IconRail.tsx  MarginsPanel.test.tsx  MarginsPanel.tsx  MetadataPanel.test.tsx  MetadataPanel.tsx  Notice.tsx  OptimizePanel.test.tsx  OptimizePanel.tsx  PageSlot.tsx  PagesPanel.tsx  PasswordPrompt.test.tsx  PasswordPrompt.tsx  RedactLayer.test.tsx  RedactLayer.tsx  RedactPanel.test.tsx  RedactPanel.tsx  RedactPreviewBanner.tsx  SearchPanel.test.tsx  SearchPanel.tsx  SetPasswordDialog.test.tsx  SetPasswordDialog.tsx  Sidebar.tsx  SignatureField.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TextLayer.tsx  ThumbnailPanel.tsx  Toolbar.test.tsx  Toolbar.tsx  TypewriterLayer.test.tsx  TypewriterLayer.tsx  (+4 more)
src/store/: usePdfStore.test.ts  usePdfStore.ts
src/styles/: global.css
src/utils/: bgraConvert.ts  color.ts  confirmBreakingEdit.ts  pdfDate.test.ts  pdfDate.ts  redactSave.ts  redaction.test.ts  redaction.ts  renderCache.test.ts  renderCache.ts  saveDocument.ts  signature.ts  textSelection.test.ts  textSelection.ts  typewriter.test.ts  typewriter.ts  zoomConstants.ts
