[package]
name = "tumbler"
version = "2.0.0"
edition = "2021"

[lib]
name = "tumbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
pdfium-render = { version = "0.9", features = ["pdfium_use_win32", "thread_safe"] }
libloading = "0.7"
lopdf = "0.34"
thiserror = "2"

# Pin time to avoid blanket impl conflict with cookie 0.18
time = "=0.3.41"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_WinRT",
    "Win32_UI_Controls_Dialogs",
    "UI_ViewManagement",
    # OCR via Windows.Media.Ocr (see commands/ocr.rs)
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
] }
