[workspace]
members = [".", "thumbnailer"]

[package]
name = "tumbler"
version = "2.3.1"
edition = "2021"

[lib]
name = "tumbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
pdfium-render = { version = "0.9", features = ["pdfium_use_win32", "thread_safe"] }
libloading = "0.7"
lopdf = "0.34"
regex = "1"
thiserror = "2"
# Image decode/resize/JPEG re-encode for the image-recompression step.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# zlib inflate for the FlateDecode raw-raster path (decompressed_content()
# deliberately refuses Image XObjects, so we inflate those ourselves).
flate2 = "1"

# Pin time to avoid blanket impl conflict with cookie 0.18
time = "=0.3.41"
cms = "0.2.3"
der = "0.7"
const-oid = "0.9"
x509-cert = "0.2.5"
sha2 = "0.10"
hex = "0.4.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_WinRT",
    "Win32_UI_Controls_Dialogs",
    "UI_ViewManagement",
    # OCR via Windows.Media.Ocr (see commands/ocr.rs)
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
] }
