[workspace]
members = [".", "thumbnailer"]

[package]
name = "tumbler"
version = "2.10.4"
edition = "2021"

[lib]
name = "tumbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
pdfium-render = { version = "0.9", features = ["pdfium_use_win32", "thread_safe"] }
libloading = "0.7"
# lopdf 0.43.0's default `time` feature has a compile error (datetime.rs uses a
# removed time-crate API); we don't use lopdf's date conversions, so drop it.
lopdf = { version = "0.43", default-features = false, features = ["chrono", "jiff", "rayon"] }
regex = "1"
thiserror = "2"
# Image decode/resize/JPEG re-encode for the image-recompression step.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# zlib inflate for the FlateDecode raw-raster path (decompressed_content()
# deliberately refuses Image XObjects, so we inflate those ourselves).
flate2 = "1"
# std::fs::canonicalize returns \\?\-prefixed paths on Windows; dunce strips
# the prefix when the plain path is equivalent (see canonicalize_path).
dunce = "1"
# OS randomness for the AES-256 file-encryption key when Save re-encrypts a
# password-protected document (commands/encryption.rs). Already in the tree
# transitively (uuid).
getrandom = "0.3"

# time is not used directly; it comes in transitively via cookie (Tauri).
# It was formerly pinned to =0.3.41 to dodge a blanket-impl conflict with
# cookie 0.18; newer time (>=0.3.5x) resolves that, so a plain ^0.3 is fine.
time = "0.3"
# ByteRange digests for signature integrity checks (commands/signature.rs).
# CMS parsing itself is Windows CryptoAPI (CryptMsg*), which handles Adobe's
# BER indefinite-length encoding natively (issue #39).
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    # CMS/PKCS#7 signature parsing via CryptMsg* (see commands/signature.rs)
    "Win32_Security_Cryptography",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_WinRT",
    "Win32_UI_Controls_Dialogs",
    "UI_ViewManagement",
    # OCR via Windows.Media.Ocr (see commands/ocr.rs)
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
] }
