# Subtext — A Redaction Checker (doc/redaction-checker-design.md).
# Dependencies are pinned by the ratified spec (§6.1); versions mirror
# Tumbler's where a type crosses the boundary (lopdf, pdfium-render) so the
# shared graph resolves one copy.
[package]
name = "subtext"
version = "0.1.0"
edition = "2021"
description = "Subtext — A Redaction Checker: read-only, tool-agnostic detection of redacted text that is still recoverable from a PDF."
license = "MIT"
readme = "README.md"

[dependencies]
# lopdf mirrors Tumbler's pin: 0.43.0's default `time` feature has a compile
# error (upstream #518), so default-features stays off.
lopdf = { version = "0.43", default-features = false, features = ["chrono", "rayon"] }
# pdfium-render WITHOUT `pdfium_use_win32`: Subtext never prints, so it doesn't
# touch windows::Win32::Gdi and the default (portable) build sidesteps the
# windows-version-unification gotcha documented in CLAUDE.md.
pdfium-render = { version = "0.9", features = ["thread_safe"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"        # XMP + XFA (streaming; spec §7 note 3)
clap = { version = "4", features = ["derive"] }
chrono = "0.4"            # generatedAt RFC 3339; already in Tumbler's tree
flate2 = "1"              # Flate inflate for the raw/orphan passes (Phase 3)

[features]
default = []
# Windows-only: links Tumbler's OCR engine (the only literal code linkage —
# everything else is blueprint reuse, spec §6). Wired for real in Phase 3.
ocr = ["dep:tumbler_lib", "dep:windows"]

[target.'cfg(target_os = "windows")'.dependencies]
# Spec §6.1 names this `tumbler_lib = { path = ... }`; the package at
# src-tauri/ is named `tumbler` (its [lib] is tumbler_lib), so the rename
# needs an explicit `package` key — flagged as a spec-drift fix, not a design
# change.
tumbler_lib = { package = "tumbler", path = "../../src-tauri", optional = true }
# When `ocr` links tumbler_lib (which enables pdfium_use_win32), feature
# unification turns pdfium_use_win32 on for the shared pdfium-render, so this
# build MUST mirror Tumbler's windows pin to compile (the CLAUDE.md gotcha).
windows = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
