[package]
name = "tumbler-thumbnailer"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdfium-render = { version = "0.9", features = ["pdfium_use_win32", "thread_safe"] }
# windows-core must be a direct dep so the `#[implement]` macro can resolve ::windows_core:: paths
windows-core = "0.61"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
